--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: 'Segoe UI', sans-serif;
-    background: #f9fafb;
+    background: red;
 }
 
 .layout {
@@ -58,3 +58,4 @@ body {
     border-radius: 6px;
     margin-top: 10px;
 }
+
