--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: 'Segoe UI', sans-serif;
-    background: red;
+    background: #f9fafb;
 }
 
 .layout {
@@ -58,4 +58,5 @@ body {
     border-radius: 6px;
     margin-top: 10px;
 }
+
 
