--- a/style.css
+++ b/style.css
@@ -110,29 +110,6 @@ body {
     color: #6b7280;
 }
 
-.logo {
-    display: flex;
-    align-items: center;
-    gap: 12px;
-    margin-bottom: 40px;
-}
-
-
-.logo-icon {
-    background: #2563eb;
-    color: white;
-    padding: 6px 10px;
-    border-radius: 8px;
-    font-weight: 700;
-}
-
-.logo-text {
-    font-size: 18px;
-    font-weight: 700;
-    color: #111827;
-     line-height: 1.2;
-}
-
 
 .topbar {
     display: flex;
@@ -178,6 +155,17 @@ body {
 }
 
 
+.logo {
+    padding: 20px 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo img {
+    width: 140px;
+    height: auto;
+}
 
 
 
